<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.ankit_pc.dietmanager.Fruits">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apple"
            android:textStyle="bold"
            android:contentDescription="@string/apple"
            android:onClick="onClickApples"
            android:id="@+id/button_apples" />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apricot"
            android:textStyle="bold"
            android:contentDescription="@string/apricot"
            android:onClick="onClickAppricots"
            android:id="@+id/button_appricots" />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/avacado"
            android:textStyle="bold"
            android:contentDescription="@string/avacado"
            android:onClick="onClickAvacado"
            android:id="@+id/button_avacado" />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/banana"
            android:textStyle="bold"
            android:contentDescription="@string/banana"
            android:onClick="onClickBananas"
            android:id="@+id/button_bananas" />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blackberry"
            android:textStyle="bold"
            android:contentDescription="@string/blackberry"
            android:onClick="onClickBlackBerries"
            android:id="@+id/button_black_berries" />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blueberry"
            android:textStyle="bold"
            android:contentDescription="@string/blueberry"
            android:onClick="onClickBlueBerries"
            android:id="@+id/button_blue_berries" />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cherry"
            android:textStyle="bold"
            android:contentDescription="@string/cherry"
            android:onClick="onClickCherries"
            android:id="@+id/button_cherries" />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grapes"
            android:textStyle="bold"
            android:contentDescription="@string/grapes"
            android:onClick="onClickGrapes"
            android:id="@+id/button_grapes" />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mangoes"
            android:textStyle="bold"
            android:contentDescription="@string/mangoes"
            android:onClick="onClickMangoes"
            android:id="@+id/button_mangoes" />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orange"
            android:textStyle="bold"
            android:contentDescription="@string/orange"
            android:onClick="onClickOrange"
            android:id="@+id/button_orange" />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pears"
            android:textStyle="bold"
            android:contentDescription="@string/pears"
            android:onClick="onClickPears"
            android:id="@+id/button_pears" />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pineapple"
            android:textStyle="bold"
            android:contentDescription="@string/pineapple"
            android:onClick="onClickPineApples"
            android:id="@+id/button_pine_apples" />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plum"
            android:textStyle="bold"
            android:contentDescription="@string/plum"
            android:onClick="onClickPlums"
            android:id="@+id/button_plums" />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strawberry"
            android:textStyle="bold"
            android:contentDescription="@string/strawberry"
            android:onClick="onClickStrawBerries"
            android:id="@+id/button_straw_berries" />

    </LinearLayout>
</ScrollView>
