<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vegetables"
        android:contentDescription="@string/vegetables"
        android:onClick="onClickVegetables"
        android:id="@+id/button_vegetables" />

    <Button
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fruits"
        android:contentDescription="@string/fruits"
        android:onClick="onClickFruits"
        android:id="@+id/button_fruits" />

    <Button
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuts"
        android:contentDescription="@string/nuts"
        android:onClick="onClickNuts"
        android:id="@+id/button_nuts" />

    <Button
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/baby_food"
        android:contentDescription="@string/baby_food"
        android:onClick="onClickBabyFood"
        android:id="@+id/button_baby" />

    <Button
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dairy"
        android:contentDescription="@string/dairy"
        android:onClick="onClickDairy"
        android:id="@+id/button_dairy" />


</LinearLayout>