<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/widgetShowNutrientValue">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/widgetNutrient"
            android:layout_weight="1"
            android:text="@string/nutrient_name" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/widgetUnit"
            android:layout_weight="1"
            android:text="@string/nutrient_unit" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/widgetQuantity"
            android:layout_toRightOf="@+id/widgetUnit"
            android:layout_weight="1"
            android:text="@string/nutrient_quan" />


    </LinearLayout>

</LinearLayout>